// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleguideComponentNotificationHandler getTeamsMessage method for created event should match snapshot when there are more than one events 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**2 new components** are added in _styleguideName_! 🏃‍♂️",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ImageSet",
      "spacing": "extraLarge",
      "imageSize": "large",
      "images": [
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        },
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        }
      ],
      "separator": false
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://components?stid=styleguideId&coids=componentId,componentId2"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId&coid=componentId2"
        }
      ]
    }
  ]
}
`;

exports[`styleguideComponentNotificationHandler getTeamsMessage method for created event should match snapshot when there is only one event 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**componentName** is added in _styleguideName_! 🏃‍♂️",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ImageSet",
      "spacing": "extraLarge",
      "imageSize": "large",
      "images": [
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        }
      ],
      "separator": false
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://components?stid=styleguideId&coids=componentId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId"
        }
      ]
    }
  ]
}
`;

exports[`styleguideComponentNotificationHandler getTeamsMessage method for version_created event should match snapshot when there are more than one events 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**2 components** are updated in _styleguideName_! 🏃‍♂️",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ImageSet",
      "spacing": "extraLarge",
      "imageSize": "large",
      "images": [
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        },
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        }
      ],
      "separator": false
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://components?stid=styleguideId&coids=componentId,componentId2"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId&coid=componentId2"
        }
      ]
    }
  ]
}
`;

exports[`styleguideComponentNotificationHandler getTeamsMessage method for version_created event should match snapshot when there is only one event 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**componentName** is updated in _styleguideName_! 🏃‍♂️",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ImageSet",
      "spacing": "extraLarge",
      "imageSize": "large",
      "images": [
        {
          "type": "Image",
          "url": "http://placehold.it/200"
        }
      ],
      "separator": false
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://components?stid=styleguideId&coids=componentId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/components?coid=componentId"
        }
      ]
    }
  ]
}
`;
